add test post request

--- a/ComponentsHub/Views/Home/Index.cshtml
+++ b/ComponentsHub/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewBag.Title = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Промэлектроника</h1>
+<h2>Part Number</h2>
+test TPS4060
+<h3>Response:</h3>
+
+@*<div>@ViewBag.ResponseContent</div>*@
+<div>@Html.Raw(ViewBag.ParsedHtml)</div>
