mac test commit add html parse

--- a/ComponentsHub/Views/Home/Index.cshtml
+++ b/ComponentsHub/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
 test TPS4060
 <h3>Response:</h3>
 
-@*<div>@ViewBag.ResponseContent</div>*@
-<div>@Html.Raw(ViewBag.ParsedHtml)</div>
+<div>@ViewBag.price</div>
+@*<div>@Html.Raw(ViewBag.ParsedHtml)</div>*@
