add component model

--- a/ComponentsHub/Views/Home/Index.cshtml
+++ b/ComponentsHub/Views/Home/Index.cshtml
@@ -8,4 +8,4 @@ test TPS4060
 <h3>Response:</h3>
 
 @*<div>@ViewBag.price</div>*@
-<div>@Html.Raw(ViewBag.ParsedAmount)</div>
+<div>@ViewBag.ParsedAmount</div>
